--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -427,7 +427,6 @@ body.dark-mode .banner-eicw img {
     margin-top: 2em;
     border: 1px solid #2b2b2b33;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
-    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 body.dark-mode h2.page-title {
@@ -436,6 +435,8 @@ body.dark-mode h2.page-title {
 
 body.dark-mode .cp-img {
     border-radius: 20px;
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
 }
 
 body.dark-mode .ftco-section-otb {
