--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a,
 a:active,
 a:focus,
 a:hover {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
