--- a/css/style.css
+++ b/css/style.css
@@ -2066,6 +2066,18 @@ figcaption p {
     color: #636457;
 }
 
+figcaption p a {
+    margin-top: 10px;
+    font-size: 15px;
+    color: #3294ac;
+}
+
+figcaption p a:hover {
+    margin-top: 10px;
+    font-size: 15px;
+    color: #52718d;
+}
+
 .container-blog {
     width: 100%;
     padding-right: 42px;
@@ -2675,18 +2687,10 @@ select:focus {
     padding-bottom: 2em;
 }
 
-#summary,
-#tm,
-#lppl {
-    scroll-margin-top: 8vh;
-}
 
-#dsi,
-#pct,
-#pcb,
-#pcu,
-#pcc {
-    scroll-margin-top: 35vh;
+#featured,
+#ci-img {
+    scroll-margin-top: 5vh;
 }
 
 #eia-img,
@@ -2719,21 +2723,30 @@ select:focus {
 #psrith,
 #cckint,
 #br-diag,
-#bat,
-#tv,
-#staris2,
-#bcr {
+#summary,
+#tm,
+#lppl {
     scroll-margin-top: 8vh;
-}
-
-#featured,
-#ci-img {
-    scroll-margin-top: 5vh;
 }
 
 #changes,
 #conclusion {
     scroll-margin-top: 10vh;
+}
+
+#bat,
+#tv,
+#staris2,
+#bcr {
+    scroll-margin-top: 12vh;
+}
+
+#dsi,
+#pct,
+#pcb,
+#pcu,
+#pcc {
+    scroll-margin-top: 35vh;
 }
 
 /* ------------------------------------------ 21.0 EICW ------------------------------------------ */
@@ -2855,7 +2868,7 @@ li.breadcrumb-item a {
 }
 
 #cbus-img {
-    background-image: url("../eicw/img/cdbus-light.png");
+    background-image: url("../eicw/img/cover-psr-light.png");
     height: 72vh;
 }
 
@@ -3778,8 +3791,8 @@ md-menu {
 }
 
 .portfolio-img {
-    border: 1px solid rgba(255, 255, 255, 0.2) !important;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2) !important;
+    border: none;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
 }
 
 img.mfp-img {
@@ -3807,9 +3820,9 @@ img.mfp-img {
     top: 50%;
     width: 44px;
     height: 44px;
-    border: none;
+    border: 1px solid #2b2b2b33 !important;
     border-radius: 50%;
-    background: #ffffff !important;
+    background: #fff !important;
     cursor: pointer;
     transform: translateY(0%) !important;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1) !important;
@@ -3826,6 +3839,21 @@ img.mfp-img {
     box-shadow: 0 0 0 5px #09F;
 }
 
+.flickity-prev-next-button .arrow {
+    fill: #000 !important;
+}
+
+.flickity-prev-next-button:hover .arrow {
+    fill: #000 !important;
+}
+
 .flickity-prev-next-button:disabled {
     display: none !important;
+}
+
+.flickity-prev-next-button svg {
+    left: 27% !important;
+    top: 20% !important;
+    width: 45% !important;
+    height: 58% !important;
 }
