XXXX-XX Feature Update for Version Next (6.0.0)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1098,7 +1098,7 @@
     .breadcrumb-area-eicw-subs {
         position: relative;
         z-index: 1;
-        height: 25vh;
+        height: 25vh !important;
     }
 
     p {
