--- a/css/style.css
+++ b/css/style.css
@@ -2143,7 +2143,7 @@ figcaption p a:hover {
 }
 
 .about-author {
-    background-color: #e4e6cf;
+    background-color: #fff;
     box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
     border-radius: 20px;
     padding-bottom: 2px;
@@ -2707,11 +2707,6 @@ select:focus {
 #proposed,
 #summary,
 #history,
-#v1,
-#v2,
-#v3,
-#v4,
-#whats-next,
 #rewrite,
 #ai,
 #typeface,
@@ -2739,7 +2734,12 @@ select:focus {
 #changes,
 #tooSoon,
 #whathappened,
-#paperSign {
+#paperSign,
+#v1,
+#v2,
+#v3,
+#v4,
+#whats-next {
     scroll-margin-top: 12vh;
 }
 
