2026-01 Feature Update for Version Next (6.0.0)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -812,5 +812,5 @@ body.dark-mode .flickity-prev-next-button svg {
 }
 
 body.dark-mode .flickity-prev-next-button .arrow {
-    fill: #fff;
+    fill: #fff !important;
 }
