2026-01 Feature Update for Version Next (6.0.0)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -454,10 +454,10 @@ body.dark-mode li.breadcrumb-item a {
     color: #fff;
 }
 
-body.dark-mode .bg-overlay-section::after {
-    /* background-color: #080808d2;
-    backdrop-filter: blur(15px); */
-}
+/* body.dark-mode .bg-overlay-section::after {
+    background-color: #080808d2;
+    backdrop-filter: blur(15px);
+} */
 
 /* ------------------------------------------ */
 
