--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -10,6 +10,12 @@
     - 3.0 Indiv Pages
     - 4.0 Blog Page(s)
     - 5.0 EICW
+    - 6.0 Timeline
+    - 7.0 Portfolio Controls
+    - 8.0 Tabs Controls
+    - 9.0 Navigation
+    - 10.0 Footer
+    - 11.0 Screenshots Draggable Carousel
 --------------------------------------------- */
 
 /* ------------------------------------------ General ------------------------------------------ */
@@ -49,8 +55,6 @@ body.dark-mode .wbnrfz_btn_theme:hover {
     transform: translateY(-2px);
 }
 
-
-/* ---- */
 body.dark-mode #hero {
     width: 100%;
     height: 100vh;
@@ -62,16 +66,12 @@ body.dark-mode #hero {
 
 body.dark-mode #hero:before {
     content: "";
-    /* background-color: #00000050; */
-    /* backdrop-filter: blur(15px); */
     position: absolute;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
 }
-
-
 
 body.dark-mode h1,
 body.dark-mode h2,
@@ -174,56 +174,15 @@ body.dark-mode #check {
     display: none;
 }
 
-
-/* ---- */
-
-/* ---- Footer */
-body.dark-mode .footer-area {
-    background-color: #1e1e1e;
-    color: #fff;
-    transition: all 0.5s ease;
-    z-index: 999;
-}
-
-body.dark-mode .footer-area .social-info a {
-    margin: 0 10px;
-    font-size: 14px;
-    color: #fff;
-    background-color: #6a6a6a;
-    border-radius: 50%;
-    transition: color 0.3s ease;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 8px;
-    padding-bottom: 7px;
-    text-align: center;
-    transition: all 0.3s ease;
-
-}
-
-body.dark-mode .footer-area .social-info a:hover {
-    background-color: #6d99c0;
-    color: #fff !important;
-}
-
-body.dark-mode .footer-content .copywrite-text p {
-    color: #fff;
-}
-
 body.dark-mode .cookiebanner span {
     color: #000;
 }
-
-/* ---- */
 
 /* ---- Progress Bar */
 body.dark-mode .single-skill .progress {
     background-color: #2e2e2e;
     transition: all 0.5s ease;
 }
-
-/* ---- */
-
 
 /* ------------------------------------------ */
 
@@ -404,6 +363,7 @@ body.dark-mode blockquote {
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 5.0 EICW ------------------------------------------ */
+
 body.dark-mode .wbnrfz-summ-micro {
     background-color: #1e1e1e;
     transition: all 0.5s ease;
@@ -454,14 +414,10 @@ body.dark-mode li.breadcrumb-item a {
     color: #fff;
 }
 
-/* body.dark-mode .bg-overlay-section::after {
-    background-color: #080808d2;
-    backdrop-filter: blur(15px);
-} */
-
 /* ------------------------------------------ */
 
-/* ------------------------------------------ xx.x Timeline ------------------------------------------ */
+/* ------------------------------------------ 6.0 Timeline ------------------------------------------ */
+
 body.dark-mode .timeline-item {
     background-color: #2e2e2e;
     transition: all 0.5s ease;
@@ -474,7 +430,10 @@ body.dark-mode .timeline-item:hover {
     transform: translateY(-2px);
 }
 
-/* ------------------------------------------ xx.x Portfolio Controls ------------------------------------------ */
+/* ------------------------------------------*/
+
+/* ------------------------------------------ 7.0 Portfolio Controls ------------------------------------------ */
+
 body.dark-mode .portfolio-sort label {
     font-size: 16px;
     font-weight: bold;
@@ -507,7 +466,6 @@ body.dark-mode .wbnrfz-summ::before {
     width: 100%;
     height: 100%;
     background: #00000080;
-    /* backdrop-filter: blur(5px); */
     z-index: 1;
 }
 
@@ -565,7 +523,6 @@ body.dark-mode .wbnrfz_details_blog {
     padding-top: 3em;
     padding-bottom: 3em;
     z-index: 1000000 !important;
-    /* mask-image: linear-gradient(to bottom, black calc(100% - 32px), transparent 100%); */
 }
 
 body.dark-mode .wbnrfz_eicw {
@@ -595,19 +552,13 @@ body.dark-mode .form-control {
 
 body.dark-mode .form-control::placeholder {
     color: #cccccc;
-    /* Red color example */
     opacity: 1;
-    /* Ensure full opacity if desired, as some browsers default to lower opacity */
 }
 
+/* ------------------------------------------*/
 
+/* ------------------------------------------ 8.0 Tabs Controls ------------------------------------------ */
 
-
-
-
-
-
-/* ------------------------------------------ xx.x Tabs Controls ------------------------------------------ */
 body.dark-mode .scrollable-tabs-container a {
     color: #fff;
     text-decoration: none;
@@ -651,12 +602,9 @@ body.dark-mode .scrollable-tabs-container a.active {
     color: #fff;
 }
 
+/* ------------------------------------------*/
 
-
-
-
-
-/* ==================== Navigation Bar ==================== */
+/* ------------------------------------------ 9.0 Navigation ------------------------------------------ */
 
 body.dark-mode .navbar {
     background: #000000a9;
@@ -674,7 +622,6 @@ body.dark-mode .navbar {
     position: relative;
     overflow: hidden;
 }
-
 
 body.dark-mode .nav-link {
     color: #fff;
@@ -750,9 +697,9 @@ body.dark-mode .mobile-menu-link {
     color: #fff;
 }
 
+/* ------------------------------------------*/
 
-
-/* ==================== FOOTER ==================== */
+/* ------------------------------------------ 10.0 Footer ------------------------------------------ */
 
 body.dark-mode .footer {
     background: #2c2c2c8c;
@@ -781,9 +728,11 @@ body.dark-mode .footer-copy {
     color: #fff;
 }
 
+/* ------------------------------------------*/
 
 
-/* Screenshots Draggable Carousel */
+/* ------------------------------------------ 11.0 Screenshots Draggable Carousel ------------------------------------------ */
+
 body.dark-mode .flickity-prev-next-button {
     position: absolute;
     top: 50%;
@@ -814,3 +763,5 @@ body.dark-mode .flickity-prev-next-button svg {
 body.dark-mode .flickity-prev-next-button .arrow {
     fill: #fff !important;
 }
+
+/* ------------------------------------------*/
