2026-01 Feature Update for Version Next (6.0.0)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1178,13 +1178,9 @@
     #cui-img,
     #covccl-img,
     #cv-eicw,
-    #cv-tdc {
-        height: 45vh;
-
-    }
-
+    #cv-tdc,
     #cv-iwf {
-        height: 66vh;
+        height: 45vh !important;
 
     }
 
