--- a/css/style.css
+++ b/css/style.css
@@ -2604,8 +2604,8 @@ li.breadcrumb-item.active a:hover {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    /* border: 1px solid #2b2b2b33; */
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .banner {
@@ -3411,7 +3411,9 @@ li.breadcrumb-item a {
 
 .footer-social {
     display: flex;
-    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
 }
 
 .social-link {
