--- a/css/style.css
+++ b/css/style.css
@@ -3487,7 +3487,7 @@ li.breadcrumb-item a:hover {
 
 .portfolio-img {
     border: none;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.007);
+    /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.007); */
 }
 
 img.mfp-img {
