--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -79,7 +79,9 @@ body.dark-mode h3,
 body.dark-mode h4,
 body.dark-mode h5,
 body.dark-mode h6,
-body.dark-mode p {
+body.dark-mode p,
+body.dark-mode strong,
+body.dark-mode li {
     color: #fff;
 }
 
