2026-01 Feature Update for Version Next (6.0.0)

--- a/css/style.css
+++ b/css/style.css
@@ -2551,7 +2551,10 @@ select:focus {
 #consist,
 #overall,
 #proposed,
-#summary {
+#summary,
+#time,
+#conc-rea,
+#descol {
     scroll-margin-top: 12vh;
 }
 
