2026-01 Feature Update for Version Next (6.0.0)

--- a/css/style.css
+++ b/css/style.css
@@ -1717,6 +1717,11 @@ h1.brc {
     color: #fff;
 }
 
+.column {
+    display: flex;
+    align-items: stretch;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 16.0 Blog Post Section ------------------------------------------ */
