--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -889,7 +889,7 @@ body.dark-mode .nav-link:hover span {
 body.dark-mode .nav-link-toggle {
     color: #fff;
     background: #007093;
-    background: linear-gradient(90deg, rgba(0, 112, 147, 1) 0%, rgba(45, 147, 172, 1) 100%);
+    background: linear-gradient(90deg, rgb(198, 165, 199) 0%, rgb(144, 112, 145) 100%);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
     border: none;
 }
