--- a/css/style.css
+++ b/css/style.css
@@ -3593,3 +3593,8 @@ img.mfp-img {
 }
 
 /* ------------------------------------------*/
+
+
+.bus-time {
+    margin-right: 20px; /* Adjust spacing as needed */
+}
