--- a/css/style.css
+++ b/css/style.css
@@ -3594,15 +3594,24 @@ img.mfp-img {
 
 /* ------------------------------------------*/
 
+table th {
+    background-color: #94d40b !important;
+    color: #000;
+}
 
 .bus-time {
-    margin-right: 20px; /* Adjust spacing as needed */
+    display: inline-block; /* Ensures consistent alignment */
+    width: 80px; /* Set a fixed width for alignment */
+    text-align: center; /* Center-align the text */
+    margin-right: 10em; /* Retain the existing spacing */
+    font-size: 20px; /* Retain the current font size */
 }
 
 .svcNum {
     background-color: #94d40b;
     border-radius: 5px;
     color: #000;
+    margin-bottom: 1rem;
 }
 
 .svcNumtd {
