--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -775,3 +775,20 @@ body.dark-mode .flickity-prev-next-button .arrow {
 }
 
 /* ------------------------------------------*/
+
+body.dark-mode table th {
+    background-color: #94d40b;
+    color: #000;
+}
+
+body.dark-mode table td {
+    background-color: #202020;
+    color: #fff;
+    border-color: #000;
+}
+
+body.dark-mode .svcNum {
+    background-color: #94d40b;
+    border-radius: 5px;
+    color: #000;
+}
